<resources>
    <string name="app_name">Litteray</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="continueSignUp">Continue</string>
    <string name="choose_image">Choose Image</string>
    <string name="sign_in">Sign In</string>
    <string name="about_us">About Us</string>
    <string name="activity">ACTIVITY</string>
    <string name="linkMenu">Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="type_something">Type something...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="main_mission">MAIN MISSION</string>
    <string name="text_main_mission">Litteray was created for NFT influencers to make the communication between the Artist and the Holder better.</string>
    <string name="the_creators">THE CREATORS</string>
    <string name="name_meaning">NAME MEANING</string>
    <string name="text_the_creators">LItteray was created by the main programmer of JoelTeam as the diploma project.\n The theme of project: Programming\n Teacher: Dilara Abzhanova</string>
    <string name="text_name_meaning">Title “Litteray” was inspired by the Greek word “Litterae” which means “Letter” or “Dispatch” - the fast letter.\nThe code name of the App: “WhatsApp 2”</string>
    <string name="text_litteray_on_ios">Litteray is a diploma project of Java courses. The opportunity of appearing Litteray on iOS devices is too smooth. (I just have no device with MacOS, I have tried hackintosh but it’s too bad)</string>
    <string name="litteray_on_ios">LITTERAY ON iOS</string>
    <string name="text_open_sus">Litteray is open-source messenger. The code of Litteray is available on GitHub page of JolyTh3Kidd.</string>
    <string name="open_source">OPEN-SOURCE</string>
    <string name="difference_title">DIFFERENCE</string>
    <string name="text_difference">Why do I need Litteray if there’s many apps like this? The main aim of Litteray is to help NFT Artists and Holders communicate together, how we mentioned above. But the other messengers as Telegram, WhatsApp, etc. can’t provide such a level of comfort of communication for NFT-influencers as Litteray.</string>
    <string name="faq">FAQ</string>
    <string name="licence_text">Litteray on behalf of JoelTeam, under exclusive licence to HardBobTeam</string>
    <string name="twitter">Twitter</string>
    <string name="opensea">OpenSea</string>
    <string name="website">Website</string>
    <string name="telegram">Telegram</string>
    <string name="instagram">Instagram</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="profile_type">Profile Type</string>
    <string name="change_login">Change login</string>
    <string name="change_username">Change username</string>
    <string name="change_e_mail">Change e-mail</string>
    <string name="change_password">Change password</string>
    <string name="change_image">Change image</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="straighten_up_mode">Straighten Up Mode</string>
    <string name="send_image">Send Image</string>
    <string name="litteray">Litteray</string>
    <string name="number_verification">Number Verification</string>
    <string name="we_will_send_you_a_code_on_this_mobile_number">we will send you a code on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="number_type">+87777777777</string>
    <string name="get_code">Get Code</string>
    <string name="we_have_sent_you_a_verification_code">we have sent you a verification code</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?</string>
    <string name="resend_code">Resend Code</string>
    <string name="send_code">Send Code</string>
    <string name="search">Search</string>
</resources>