<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.AboutUsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/goBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_goback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/litterayLogo"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:src="@drawable/ic_litteray_logo_faq"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_64sdp"/>

        <TextView
            android:id="@+id/mainMission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:text="@string/main_mission"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_24sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/litterayLogo"/>

        <TextView
            android:id="@+id/text_mainMisson"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:textColor="@color/gray"
            android:layout_marginTop="@dimen/_6sdp"
            android:textSize="@dimen/_12ssp"
            android:text="@string/text_main_mission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainMission"/>

        <TextView
            android:id="@+id/theCreators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:text="@string/the_creators"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_mainMisson"/>

        <TextView
            android:id="@+id/text_theCreators"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:textColor="@color/gray"
            android:layout_marginTop="@dimen/_6sdp"
            android:textSize="@dimen/_12ssp"
            android:text="@string/text_the_creators"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/theCreators"/>

        <TextView
            android:id="@+id/nameMeaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:text="@string/name_meaning"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_theCreators"/>

        <TextView
            android:id="@+id/text_nameMeaning"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:textColor="@color/gray"
            android:layout_marginTop="@dimen/_6sdp"
            android:textSize="@dimen/_12ssp"
            android:text="@string/text_name_meaning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameMeaning"/>

        <TextView
            android:id="@+id/litterayiOS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:text="@string/litteray_on_ios"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_nameMeaning"/>

        <TextView
            android:id="@+id/text_litterayiOS"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:textColor="@color/gray"
            android:layout_marginTop="@dimen/_6sdp"
            android:textSize="@dimen/_12ssp"
            android:text="@string/text_litteray_on_ios"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/litterayiOS"/>

        <TextView
            android:id="@+id/openSus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:text="@string/open_source"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_litterayiOS"/>

        <TextView
            android:id="@+id/text_openSus"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:textColor="@color/gray"
            android:layout_marginTop="@dimen/_6sdp"
            android:textSize="@dimen/_12ssp"
            android:text="@string/text_open_sus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/openSus"/>

        <TextView
            android:id="@+id/difference_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:text="@string/difference_title"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_openSus"/>

        <TextView
            android:id="@+id/text_difference"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:textColor="@color/gray"
            android:layout_marginTop="@dimen/_6sdp"
            android:textSize="@dimen/_12ssp"
            android:text="@string/text_difference"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/difference_title"/>

        <TextView
            android:id="@+id/litterayRights"
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:textColor="@color/gray"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:textSize="@dimen/_10ssp"
            android:text="@string/licence_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_difference"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>