<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:src="@drawable/litteray_logo" />

        <EditText
            android:id="@+id/loginInput"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@drawable/background_message1"
            android:fontFamily="@font/rubik"
            android:hint="@string/login"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColorHint="@color/gray"
            android:textColor="@color/gray"
            android:textSize="@dimen/_13sdp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/_26sdp"
            android:background="@drawable/background_message1"
            android:fontFamily="@font/rubik"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColorHint="@color/gray"
            android:textColor="@color/gray"
            android:textSize="@dimen/_13sdp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/_26sdp"
            android:background="@drawable/background_message1"
            android:fontFamily="@font/rubik"
            android:hint="@string/e_mail"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColorHint="@color/gray"
            android:textColor="@color/gray"
            android:textSize="@dimen/_13sdp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/_26sdp"
            android:background="@drawable/background_message1"
            android:fontFamily="@font/rubik"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColorHint="@color/gray"
            android:textColor="@color/gray"
            android:textSize="@dimen/_13sdp"
            tools:ignore="TextContrastCheck" />

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/profilePic"
                android:layout_width="@dimen/_86sdp"
                android:layout_height="@dimen/_86sdp"
                android:background="@drawable/background_message1"
                android:scaleType="centerCrop"
                app:riv_oval="true"/>
            <TextView
                android:id="@+id/textChoose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose_image"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12sdp"/>
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="@dimen/_142sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:backgroundTint="@color/message2"
            app:cornerRadius="@dimen/_8sdp"/>

    </LinearLayout>

</ScrollView>