<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:animateLayoutChanges="false"
    tools:context=".activities.SettingsActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/faqImg"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_faq"
        app:layout_constraintBottom_toTopOf="@id/linkImg"
        app:layout_constraintEnd_toStartOf="@id/linkMenu"/>
    <Button
        android:id="@+id/aboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_80sdp"
        android:text="@string/faq"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/linkImg"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/link"
        app:layout_constraintTop_toBottomOf="@id/aboutUs"
        app:layout_constraintEnd_toStartOf="@id/linkMenu"/>
    <Button
        android:id="@+id/linkMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linkMenu"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutUs" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/quitImg"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginBottom="@dimen/_45sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_exit"
        app:layout_constraintBottom_toTopOf="@id/toolbar"
        app:layout_constraintEnd_toStartOf="@id/logOut"/>
    <Button
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/message2"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/settingMenu"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/sign_out"
            android:src="@drawable/ic_settings"
            app:tint="@color/white" />

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/footerMenuChat"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="@dimen/_30sdp"
            android:src="@drawable/ic_chats"
            app:tint="@color/gray" />

        <ImageView
            android:id="@+id/footerMenuProfile"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="@dimen/_30sdp"
            android:src="@drawable/ic_profile"
            app:tint="@color/gray" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>